--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.activity.TechniciansListActivity"></activity>
+        <activity android:name=".ui.activity.CategoriesListActivity" />
         <activity android:name=".ui.activity.TasksListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,4 +20,5 @@
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
